Changed all vibecheck to selfsync, and replaced all com.example with com.oddolgiyinc

--- a/selfsync/macos/Runner/Configs/AppInfo.xcconfig
+++ b/selfsync/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = selfsync
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.selfsync
+PRODUCT_BUNDLE_IDENTIFIER = com.oddologyinc.selfsync
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2025 com.oddologyinc. All rights reserved.
