--- a/selfsync/pubspec.yaml
+++ b/selfsync/pubspec.yaml
@@ -1,11 +1,10 @@
 name: selfsync
-description: "A behavioral health mood tracking app"
+description: "A mood tracking Flutter application with clean, modern UI"
 publish_to: 'none'
-
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.9.2
+  sdk: ^3.5.0
 
 dependencies:
   flutter:
@@ -13,7 +12,7 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   intl: ^0.19.0
-  shared_preferences: ^2.2.2
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
