--- a/selfsync/pubspec.yaml
+++ b/selfsync/pubspec.yaml
@@ -9,7 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  
+  url_launcher: ^6.2.5
   cupertino_icons: ^1.0.8
   intl: ^0.19.0
   shared_preferences: ^2.3.3
