--- a/selfsync/pubspec.yaml
+++ b/selfsync/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   intl: ^0.19.0
   shared_preferences: ^2.3.3
   fl_chart: ^0.69.0
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
