--- a/selfsync/pubspec.yaml
+++ b/selfsync/pubspec.yaml
@@ -16,6 +16,13 @@ dependencies:
   shared_preferences: ^2.3.3
   fl_chart: ^0.69.0
   flutter_dotenv: ^5.2.1
+  
+  # Cloud Backup dependencies
+  google_sign_in: ^6.2.1
+  sign_in_with_apple: ^6.1.3
+  firebase_core: ^3.8.1
+  firebase_auth: ^5.3.3
+  cloud_firestore: ^5.6.2
 
 dev_dependencies:
   flutter_test:
