--- a/selfsync/pubspec.yaml
+++ b/selfsync/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   firebase_core: ^3.8.1
   firebase_auth: ^5.3.3
   cloud_firestore: ^5.6.2
+  firebase_storage: ^12.3.5
 
 dev_dependencies:
   flutter_test:
