--- a/selfsync/pubspec.yaml
+++ b/selfsync/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   firebase_auth: ^5.3.3
   cloud_firestore: ^5.6.2
   firebase_storage: ^12.3.5
+  
+  image_picker: ^1.0.7
+  image_cropper: ^8.0.2
 
 dev_dependencies:
   flutter_test:
