--- a/selfsync/pubspec.yaml
+++ b/selfsync/pubspec.yaml
@@ -31,10 +31,19 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
+  uses-material-design: true
   assets:
     - .env
-  uses-material-design: true
+    - assets/logo.png
+    - assets/icon.png
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon.png"
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/icon.png"
