--- a/selfsync/android/app/src/main/AndroidManifest.xml
+++ b/selfsync/android/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
     </queries>
     
     <application
-        android:label="Self Sync"
+        android:label="@string/app_name"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
