--- a/selfsync/pubspec.yaml
+++ b/selfsync/pubspec.yaml
@@ -27,6 +27,10 @@ dependencies:
   
   image_picker: ^1.0.7
   image_cropper: ^8.0.2
+  
+  device_info_plus: ^10.1.0
+  package_info_plus: ^8.0.0
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
